# cross-platform-pm-arbitrage

./: .gitignore  Dockerfile  README.md  app.py  main_minimal.py  pyproject.toml  requirements.txt
data/: CandidateMatchesAll.json  CandidateMatchesSample.json  EventMatchAccuracy.csv  EventMatchCheck.csv  MarketMatchCheck_sample.csv  MarketMatchCheck_sample_labeled.json  OpenAIResponses_gpt-4.1.json  OpenAIResponses_gpt-4o-2024-08-06.json  OpenAIResponses_gpt-4o-2024-08-06_old.json  SeriesMatchSummary.csv
src/agentics/core/: agentics.py
