[project]
name = "cross-platform-pm-arbitrage"
version = "0.1.0"
authors = [
    { name = "Allen Sirolly", email = "as6383@columbia.edu" },
]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    "ddgs",
    "pydantic",
    "crewai[tools]",
    "crewai-tools[mcp]",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "openapi-python-client (>=0.24.3,<0.25.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    # "aiosqlite (>=0.21.0,<0.22.0)",
    "openai (>=1.88.0,<2.0.0)",
    # "datamodel-code-generator (>=0.31.1,<0.32.0)",
    "json-schema-to-pydantic (>=0.3.0,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "mcp (>=1.13.1,<2.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "ipywidgets>=8.1.7",
    "aiosqlite>=0.21.0",
    "numerize>=0.12",
    "hnswlib>=0.8.0",
    "jsonfinder>=0.4.2",
    "crewai[google-genai]",
    "litellm",
]

[tool.uv.sources]
agentics-py = { path = "." }
